Clean up unused endpoints/methods, require account for games, add report
- Remove Spring Data query methods never called (PartieRepository,
  ResultatRepository, MotRepository) and REST endpoints unused by the
  client (GET /api/mots, /api/joueurs, /api/joueurs/{id}/resultats,
  /api/parties/{id}, /api/parties/{id}/propositions).
- Partie.joueurId is now non-nullable: a player account is required to
  start a game (removes now-unreachable "guest mode" guards).
- Remove stray service-joueur/.claude/settings.json with a personal
  absolute path, and the standalone course material PDFs/scripts.
- Update service READMEs to match the trimmed API surface.
- Add RAPPORT.pdf (5-page project report).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>